@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.venom" version="3.5.4" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
+<addon id="plugin.video.venom" version="3.5.5" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
 
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
@@ -38,13 +38,12 @@
 			<screenshot>resources/screenshots/screenshot03a.jpg</screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v3.5.4 - March 18, 2020[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Added setting option for torrent secondary line to
-    display as std info or magnet title.  Note this is skin
-    dependent so secondary info line lengthens and
-    should be tested with your skin of choice.  The
-    new setting is under Source Options-Secondary
-    Line Torrent content.[/I]
+[B][COLOR red]Update - v3.5.5 - March 19, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Dialog source select now respects setting for
+    "Multiline Source list" like Directory source list.[/I]
+[COLOR yellow]--[/COLOR][I] Added setting to "Sort torrents by size".  The new
+    setting is enabled by default and found under
+    "Torrent Settings".[/I]
 		</news>
 	</extension>
 </addon>
