@@ -1,3 +1,10 @@
+[B][COLOR red]Update - v3.5.5 - March 19, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Dialog source select now respects setting for
+    "Multiline Source list" like Directory source list.[/I]
+[COLOR yellow]--[/COLOR][I] Added setting to "Sort torrents by size".  The new
+    setting is enabled by default and found under
+    "Torrent Settings".[/I]
+
 [B][COLOR red]Update - v3.5.4 - March 18, 2020[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Added setting option for torrent secondary line to
     display as std info or magnet title.  Note this is skin
